tests/int/use_command/snapshots/integration__int__use_command__test_targets__should_analyze_test_module_for_fixture.snap
---
source: tests/int/use_command/test_targets.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - use
    - helpers
    - "-t"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
