tests/int/use_command/snapshots/integration__int__use_command__test_targets__should_analyze_test_module_with_depth.snap
---
source: tests/int/use_command/test_targets.rs
info:
  program: crawk
  args:
    - use
    - int
    - "-t"
    - "-r"
    - "-d"
    - "1"
---
success: true
exit_code: 0
----- stdout -----
crate::common
crate::common::{backtrace_filters, crate_root_filters, crawk_check, crawk_cycles}
crate::common::{backtrace_filters, crawk, crawk_modules}
crate::common::{backtrace_filters, crawk, crawk_workspace}
crate::common::{backtrace_filters, crawk_cycles, crawk_modules, crawk_paths}
crate::common::{backtrace_filters, crawk_modules}
crate::common::{backtrace_filters, crawk}
crate::common::{crate_root_filters, crawk_check, crawk_modules}
crate::common::{crawk, crawk_check, crawk_cycles}
crate::common::{crawk, crawk_cycles, crawk_modules}
crate::common::{crawk, crawk_modules}
crate::common::{crawk_check, crawk_cycles}
crate::int

----- stderr -----
