tests/int/use_command/snapshots/integration__int__use_command__test_targets__should_analyze_test_module_with_no_deps.snap
---
source: tests/int/use_command/test_targets.rs
info:
  program: crawk
  args:
    - use
    - common
    - "-t"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
