tests/int/use_command/snapshots/integration__int__use_command__test_targets__should_error_for_nonexistent_test_module_with_include_tests.snap
---
source: tests/int/use_command/test_targets.rs
info:
  program: crawk
  args:
    - use
    - nonexistent_test_mod
    - "-t"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: Module not found: nonexistent_test_mod
