tests/int/use_command/snapshots/integration__int__use_command__test_targets__should_error_for_test_module_without_include_tests_flag.snap
---
source: tests/int/use_command/test_targets.rs
info:
  program: crawk
  args:
    - use
    - "int::command"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: Module 'int::command' not found
