tests/int/use_command/snapshots/integration__int__use_command__test_targets__should_error_for_test_module_without_include_tests_flag_fixture.snap
---
source: tests/int/use_command/test_targets.rs
info:
  program: crawk
  args:
    - "-p"
    - /home/barcie/coding/crawk/fixtures/modules
    - use
    - helpers
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: Module 'helpers' not found
